--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -15,8 +15,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/contato/index">Cadastrar contato</a>
+        <a href="contato/index" class="nav-link">Cadastrar contato</a>
       </li>
+
+      <% if(!user) { %>
+      <li class="nav-item">
+        <a href="/login/logout" class="nav-link">Sair</a>
+      </li>
+      <% } else { %>
+      <li class="nav-item">
+        <a class="nav-link" href="/contato/index">Entrar</a>
+      </li>
+
+      <% } %>
     </ul>
   </div>
 </nav>
