--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -24,7 +24,7 @@
       </li>
       <% } else { %>
       <li class="nav-item">
-        <a class="nav-link" href="/contato/index">Entrar</a>
+        <a class="nav-link" href="/login/index">Entrar</a>
       </li>
 
       <% } %>
