--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,22 +7,32 @@
       <h1 class="text-center">Agenda</h1>
       <p class="text-center lead">Contatos</p>
 
-      <%- include('includes/messages') %>
-
+      <%- include('includes/messages') %> 
+      <% if (contatos && contatos.length > 0) { %>
       <div class="responsive-table">
         <table class="table my-3">
+          <% contatos.forEach(contato => { %>
           <tr>
-            <td>Otávio</td>
-            <td>Inaba</td>
-            <td>11993443615</td>
-            <td>inabaotavio0@gmail.com</td>
+            <td><%= contato.nome %></td>
+            <td><%= contato.sobrenome %></td>
+            <td><%= contato.telefone %></td>
+            <td><%= contato.email %></td>
+            <td><a href="/contato/index/<%= contato._id %>">Editar</a></td>
+            <td>
+              <a class="text-danger" href="/contato/delete/<%= contato._id %>"
+                >Deletar</a
+              >
+            </td>
           </tr>
+          <% }) %>
         </table>
       </div>
+      <% } else { %>
+      <p class="text-center lead">Cadastre um novo contato</p>
+      <% } %>
     </div>
+    <div class="col-lg-2"></div>
   </div>
-
-  <div class="col-lg-2"></div>
 </div>
 
 <%- include('includes/footer') %>
