fix: improve error handling in contact registration and editing, and update navigation logic

--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -18,7 +18,7 @@
         <a href="contato/index" class="nav-link">Cadastrar contato</a>
       </li>
 
-      <% if(!user) { %>
+      <% if(user) { %>
       <li class="nav-item">
         <a href="/login/logout" class="nav-link">Sair</a>
       </li>
