--- a/src/views/login-logado.ejs
+++ b/src/views/login-logado.ejs
@@ -9,7 +9,7 @@
       <p class="text-center lead">
         É necessário finalizar a sessão para criar outra conta
       </p>
-      s <%- include('includes/messages'); %>
+      <%- include('includes/messages'); %>
     </div>
 
     <div class="col-lg-2"></div>
